# fyzenor

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  config.toml  file_manager.cpp  fm  fyzenor  install.sh  keys.toml  release_notes_v4.0.0.md  theme.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
aur/: .SRCINFO  PKGBUILD
src/: async_task.h  file_entry.cpp  file_entry.h  file_manager.h  main.cpp  plugin_manager.cpp  plugin_manager.h  utils.cpp  utils.h
